--- a/style.css
+++ b/style.css
@@ -134,13 +134,14 @@ home-content h1{
 
 }
 .textindent{
-    text-indent: 50px;
+    text-indent: 90px;
     font-size: 20px;
 
 }
 h5{
     text-indent: 50px;
-    font-size: 15px;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
 }
 .special{
     color: orangered;
@@ -158,4 +159,52 @@ img{
 .letterspacing{
     letter-spacing: 5px;
 }
-   
+::-webkit-scrollbar{
+    width: 15px;
+
+}
+::-webkit-scrollbar-thumb{
+
+    background-color: orangered;
+}
+::-webkit-scrollbar-track{
+    background-color: rgba(0, 0, 0, 0.607);
+    width: 50px;
+}
+pre{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+.btn-box{
+    text-indent: 90px;
+}
+.hello{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12% 8%;
+    gap: 10em;
+    background: black;
+}
+.about-img{
+    box-shadow: 0 0 25px orangered,
+                0 0 50px orangered;
+    border-radius: 50px;   
+}
+.about-content h2{
+    text-align: left;
+    color: white;
+    font-size: 42px;
+
+
+}
+.about-content h3{
+    font-size: 62px;
+    color: white;
+
+}
+.about-content p{
+    color: white;
+    font-size: 20px;
+    margin: 2em 0 3em;
+}
